2013-06-17  Roland McGrath  <roland@hack.frob.com>

	* scripts/sysd-rules.awk: Sort sysd_rules_patterns by descending
	length of target pattern, then descending length of dependency pattern.
	* configure.in (AWK): Require gawk 3.1.2 or newer.
	* manual/install.texi (Tools for Compilation): Say that we do.
	* configure: Regenerated.

	* Makerules [inhibit-sysdep-asm] (check-inhibit-asm): Variable removed.
	($(common-objpfx)sysd-rules): Replace shell logic with running ...
	* scripts/sysd-rules.awk: ... this new script.
	* sysdeps/mach/hurd/Makefile (inhibit-sysdep-asm): Use a regexp rather
	than a glob-style pattern.

2013-06-17  Joseph Myers  <joseph@codesourcery.com>

	* math/test-misc.c (main): Do not treat incorrectly rounded
	conversions as failure unless ROUNDING_TESTS passes.

2013-06-15  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15631]
	* sysdeps/ieee754/dbl-64/e_sqrt.c (__ieee754_sqrt): Save and
	restore exception state around main square root computation, then
	check for inexactness explicitly.

	* math/libm-test.inc (fma_test_data): Add another test.

2013-06-15  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* manual/threads.texi (Non-POSIX Extensions): New document
	node.  Document pthread_getattr_default_np and
	pthread_setattr_default_np.

	* Versions.def (libpthread): Add GLIBC_2.18.
	* sysdeps/unix/sysv/linux/i386/nptl/libpthread.abilist: Update.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fpu/nptl/libpthread.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libpthread.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/nptl/libpthread.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/nptl/libpthread.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/sh/nptl/libpthread.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/nptl/libpthread.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/nptl/libpthread.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/x86_64/64/nptl/libpthread.abilist:
	Likewise.